# PanelDetector

./: README.md
.github/workflows/: ci_humble.yml
detector2d/: CMakeLists.txt  package.xml
detector2d_base/: CMakeLists.txt  package.xml
detector2d_base/include/detector2d_base/: coco_names.hpp  detector2d_base.hpp
detector2d_bringup/: CMakeLists.txt  package.xml
detector2d_bringup/launch/: detector_hue.launch.py  detector_yolox.launch.py
detector2d_node/: CMakeLists.txt  package.xml
detector2d_node/include/detector2d_node/: detector2d_node.hpp
detector2d_node/src/: detector2d_node.cpp
detector2d_param/: CMakeLists.txt  package.xml
detector2d_param/src/: detector2d_parameters.yaml
detector2d_plugins/: CMakeLists.txt  detector2d_plugins.xml  package.xml
detector2d_plugins/include/detector2d_plugins/: panel_simple_detector.hpp  publish_center_plugin.hpp
detector2d_plugins/src/: panel_simple_detector.cpp  publish_center_plugin.cpp
develop_guide/: README.md
panel_detector/: CMakeLists.txt  package.xml
panel_detector_base/: CMakeLists.txt  package.xml
panel_detector_node/: CMakeLists.txt  package.xml
panel_detector_node/include/panel_detector_node/: panel_detector_node.hpp
panel_detector_node/src/: panel_detector.cpp
panel_detector_param/: CMakeLists.txt  package.xml
panel_detector_param/src/: panel_detector_parameters.yaml
panel_detector_plugins/: CMakeLists.txt  package.xml  panel_detector_plugins.xml
panel_detector_plugins/include/panel_detector_plugins/: publish_center.hpp
panel_detector_plugins/src/: publish_center.cpp  publish_center_plugin.cpp
panel_detector_plugins/test/src/: test_publish_center.cpp  test_publish_center_plugin.cpp
workflows/: ci_humble.yml
(+3 files in other folders)
